--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>FilmFeels</title>
+    <title>FilmFeels API</title>
+    <link rel="icon" type="image/x-icon" href="/public/images/FilmFeels.png" />
     <link rel="stylesheet" href="./client/styles/index.scss" />
   </head>
   <body>
